build/service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
  namespace: default
spec:
  selector:
    app: todo
  ports:
    - name: http
      protocol: TCP 
      port: 5000
      targetPort: 5000
  type: ClusterIP
