build/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  annotations:
    nginx.ingress.kubernetes.io/app-root: /
    kubernetes.io/ingress.class: nginx

spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /todo_v1
        pathType: Prefix
        backend:
          service:
            name: todo-service
            port:
              number: 5000
